whole system structure 1.1

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/idendity_people/DataSet/*
-/idendity_people/Test/*
-/idendity_people/training-data/*
+/idendify_people/DataSet/*
+/idendify_people/Test/*
+/idendify_people/training-data/*
 /training-data
 __pycache__
